--- a/1º website (netflix)/index.html
+++ b/1º website (netflix)/index.html
@@ -9,16 +9,29 @@
 </head>
 <body>
     <section class="principal">
-        <div class="sombra"></div>
-        <header class="menu">
-            <div class="navegacao">
-                <img src="Netflix_Logomark00001.png" alt="">
-                <nav class="botoes">
-                    <button>Portguês</button>
-                    <a href="">Entrar</a>
-                </nav>
+        <div class="sombra">
+            <header class="menu">
+                <div class="navegacao">
+                    <img src="Netflix_Logomark00001.png" alt="">
+                    <nav class="botoes">
+                        <button>Portguês</button>
+                        <a href="">Entrar</a>
+                    </nav>
+                </div>
+            </header>
+            <div class="cadastro">
+                <h1>Filmes, séries e muito mais, sem limites</h1>
+                <p>Assista onde quiser. Cancele quando quiser.</p>
+                <p>Quer assistir? informe seu email para criar ou reiniciar sua assinatura.</p>
+                <div class="btn-isncricao" >
+                    <div class="isncricao">
+                        <input type="text" required>
+                        <label for="">Email</label>
+                    </div>
+                    <button class="btn">Vamos lá</button>
+                </div>
             </div>
-        </header>
+        </div>
     </section>
 </body>
 </html>
