--- a/2º website/inde.html
+++ b/2º website/inde.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 </head>
 <body>
     <section class="principal">
@@ -26,27 +28,27 @@
         <section class="centro">
 
             <section class="bloco01">
-                <h1>Find your passion, <br>
+                <h1 data-aos="fade-right" data-aos-duration="1500">Find your passion, <br>
                     buid your career
                 </h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium reiciendis corrupti temporibus,
+                <p data-aos="flip-down" data-aos-duration="1500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium reiciendis corrupti temporibus,
                      doloribus harum aliquid?
                 </p>
-                <div class="caixa-botao">
+                <div class="caixa-botao" data-aos="fade-right" data-aos-duration="1500">
                     <input type="text" placeholder="Enter your Email address">
                     <button>subscribe</button>
                 </div>
 
-               <div class="conteiner">
-                    <div class="caixa">
+               <div class="conteiner" >
+                    <div class="caixa"  data-aos="fade-up" data-aos-duration="1500">
+                        <h2>1.5K</h2>
+                        <p>Clents</p>
+                    </div >
+                    <div class="caixa" data-aos="fade-up" data-aos-duration="1900">
                         <h2>1.5K</h2>
                         <p>Clents</p>
                     </div>
-                    <div class="caixa">
-                        <h2>1.5K</h2>
-                        <p>Clents</p>
-                    </div>
-                    <div class="caixa">
+                    <div class="caixa" data-aos="fade-up" data-aos-duration="2300">
                         <h2>1.5K</h2>
                         <p>Clents</p>
                     </div>
@@ -54,16 +56,18 @@
                
             </section>
 
-
-
-
-
-            <div class="bloco02">
+            <div class="bloco02" data-aos="zoom-in" data-aos-duration="1500">
                 <img src="Studying-bro001.png" alt="">
             </div>
 
 
         </section>
     </section>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+
 </body>
 </html>
